# Customer-Churn-Prediction

./: .gitignore  README.md  kaggle.json  main.py  model.ipynb  pyproject.toml  requirements.txt  run.sh
.github/workflows/: test_pipeline.yml
results/: KNN_metrics.json  Random_Forest_metrics.json  SVM_metrics.json  XG_Boost_metrics.json  _metrics.json
src/: pipeline.py
src/config/: feature_config.py
src/data_loader/: load_data.py
src/mlflow/: run_experiments.py
src/models/: evaluate_model.py  train_model.py
src/preprocessing/: encode_features.py  handle_missing.py
src/utils/: data_split.py  results.py
tests/: __init__.py  test_data_split.py  test_encode_features.py  test_evaluate_model.py  test_handle_missing.py  test_load_data.py  test_pipeline.py  test_train_model.py
